// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
Array [
  <span
    className="sc-gufDRV dUAUbL"
  >
    Xsmall
  </span>,
  <span
    className="sc-gufDRV gOfghM"
    color="goten.100"
  >
    Xsmall
  </span>,
  <span
    className="sc-gufDRV lkRgTk"
    color="goten.100"
  >
    Xsmall
  </span>,
]
`;

exports[`Label renders with different Icons 1`] = `
Array [
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <span
      className="sc-gufDRV ijAPfw"
      size="twoxsmall"
    >
      <span
        className="sc-jcCVzU irbZWC"
        size="twoxsmall"
      >
        <svg
          className="sc-elYLMi"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </span>
    <span
      className="sc-gufDRV gtPcVE"
      size="twoxsmall"
    >
      Twoxsmall
      <span
        className="sc-glENfF illBuq"
        size="twoxsmall"
      >
        <svg
          className="sc-lbxAil"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-gufDRV eMmpDe"
      size="twoxsmall"
    >
      <span
        className="sc-jcCVzU irbZWC"
        size="twoxsmall"
      >
        <svg
          className="sc-elYLMi"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="sc-glENfF illBuq"
        size="twoxsmall"
      >
        <svg
          className="sc-lbxAil"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>,
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <span
      className="sc-gufDRV bcppFV"
    >
      <span
        className="sc-jcCVzU hWoiib"
      >
        <svg
          className="sc-elYLMi"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </span>
    <span
      className="sc-gufDRV ZBtTx"
    >
      Xsmall
      <span
        className="sc-glENfF hdHXsL"
      >
        <svg
          className="sc-lbxAil"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-gufDRV gaSprv"
    >
      <span
        className="sc-jcCVzU hWoiib"
      >
        <svg
          className="sc-elYLMi"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="sc-glENfF hdHXsL"
      >
        <svg
          className="sc-lbxAil"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`Label renders with different LetterCases 1`] = `
Array [
  <span
    className="sc-gufDRV dUAUbL"
  >
    Default
  </span>,
  <span
    className="sc-gufDRV hWfek"
  >
    Lowercase
  </span>,
]
`;

exports[`Label renders with different Sizes 1`] = `
Array [
  <span
    className="sc-gufDRV bPmHuy"
    size="twoxsmall"
  >
    Twoxsmall
  </span>,
  <span
    className="sc-gufDRV dUAUbL"
  >
    Xsmall
  </span>,
  <span
    className="sc-gufDRV jQZSgH"
    size="twoxsmall"
  >
    Twoxsmall
  </span>,
  <span
    className="sc-gufDRV hWfek"
  >
    Xsmall
  </span>,
]
`;
